Fixed z-index on navbar. When calendar compresses the navigation blocks the user from seeing the next month tabs

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -10,14 +10,14 @@
 
 
 .nav {
-position: relative;
+position: fixed;
 color: white;
 padding: 30px 0px;
 text-align: center;
 font-weight: 300;
 width: 100%;
 background: rgba(0,0,0,0.5);
-z-index: 1000;
+z-index: -1;
 }
 .nav .link {
 display: inline-block;
